--- a/html/ecom.html
+++ b/html/ecom.html
@@ -12,6 +12,8 @@
   <div class="bg-container d-flex flex-column justify-content-end">
     <div class ="bg-card ">
 <h1> CSVAS MART </h1>
+<h1> CSVAS MART </h1>
+<h1> CSVAS MART </h1>
 <p id="headingElement"> welcome to www.csvasmart.com here you can shop all your neccesaries and snacks at very reasonable price</p>
 <button class="btn1"> Click Here </button> 
 </div>
